test/files/invalid/array_in_table.fbs
table Foo {
  x: [bool: 3];
}